Ateração modelo de organização

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
             <div class="circle" id="img-circle"></div>
     </section>
     <aside>
-                <img src="images/logo.png" alt="logo">
+            <img src="images/Logo_pjb.png " alt="logo">
             <h1>Gestão PJB</h1>
             <form action="POST">
                 <input class="login-form" type="text" name="" id="login-email" placeholder="Login">
