Criação interface principal

--- a/frontend/paginaIni.html
+++ b/frontend/paginaIni.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>João de Barro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
@@ -12,19 +12,26 @@
 <body>
 
     <section>
-
+        <div id="presentUser">
+            <h1>Bem-vindo,</h1>
+            <span id="nomeUser">leticia</span>
+        </div>
+        <hr id="breake1">
+        <div id="buttons">
+            <button class="button" id="bt_ini">Página Inicial</button>
+            <button class="button" id="bt_calen">Calendário</button>
+            <button class="button" id="bt_ativ">Aprovar Atividades</button>
+            <button class="button" id="bt_sair">Sair</button>
+        </div>
+        
 
     </section>
+    
+    <div class="circle" id="img-circle"></div>
     <aside>
-                <img src="images/logo.png" alt="logo">
-            <h1>Gestão PJB</h1>
-            <form action="POST">
-                <input class="login-form" type="text" name="" id="login-email" placeholder="Login">
-                <input class="login-form" type="password" name="" id="login-pass" placeholder="Password">
-                <input id="btnSub" type="submit" value="Login">
-                <button id="forgetPass">Esqueci minha senha</button>
-            </form>
+            <img src="images/Logo_pjb.png " alt="Logo_pjb" id="img_princi">
+            <img src="images/Gestão_PJB_Pag1.png" alt="Logo_pjb" id="string_pjb">
     </aside>
-</script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
