--- a/frontend/paginaIni.html
+++ b/frontend/paginaIni.html
@@ -31,6 +31,13 @@
     <aside>
             <img src="images/Logo_pjb.png " alt="Logo_pjb" id="img_princi">
             <img src="images/Gestão_PJB_Pag1.png" alt="Logo_pjb" id="string_pjb">
+
+            <div id="buttonsAside">
+                <button class="BotPrincipal" id="bot1">Cadastrar Participantes</button>
+                <button class="BotPrincipal" id="bot2">Criar Atividades</button>
+                <button class="BotPrincipal" id="bot3">Alterar Dados do Participante </button>
+                <button class="BotPrincipal" id="bot4">Presença de Participantes</button>
+            </div>
     </aside>
     <script src="./scripts/script.js"></script>
 </body>
