--- a/frontend/paginaIni.html
+++ b/frontend/paginaIni.html
@@ -12,31 +12,27 @@
 <body>
 
     <section>
+        <div id="img-circle"></div>
         <div id="presentUser">
             <h1>Bem-vindo,</h1>
             <span id="nomeUser">leticia</span>
         </div>
-        <hr id="breake1">
+        <hr id="divisor-line">
         <div id="buttons">
             <button class="button" id="bt_ini">Página Inicial</button>
             <button class="button" id="bt_calen">Calendário</button>
             <button class="button" id="bt_ativ">Aprovar Atividades</button>
             <button class="button" id="bt_sair">Sair</button>
         </div>
-        
-
     </section>
-    
-    <div class="circle" id="img-circle"></div>
     <aside>
             <img src="images/Logo_pjb.png " alt="Logo_pjb" id="img_princi">
             <img src="images/Gestão_PJB_Pag1.png" alt="Logo_pjb" id="string_pjb">
-
             <div id="buttonsAside">
-                <button class="BotPrincipal" id="bot1">Cadastrar Participantes</button>
-                <button class="BotPrincipal" id="bot2">Criar Atividades</button>
-                <button class="BotPrincipal" id="bot3">Alterar Dados do Participante </button>
-                <button class="BotPrincipal" id="bot4">Presença de Participantes</button>
+                <button class="BotPrincipal" >Cadastrar Participantes</button>
+                <button class="BotPrincipal" >Criar Atividades</button>
+                <button class="BotPrincipal" class="bottomSide">Alterar Dados do Participante </button>
+                <button class="BotPrincipal" class="bottomSide">Presença de Participantes</button>
             </div>
     </aside>
     <script src="./scripts/script.js"></script>
