Alterado Script de interação entre as páginas

--- a/frontend/pages/menu.html
+++ b/frontend/pages/menu.html
@@ -26,15 +26,15 @@
         </div>
     </section>
     <aside>
-            <img src="images/Logo_pjb.png " alt="Logo_pjb" id="img_princi">
-            <img src="images/Gestão_PJB_Pag1.png" alt="Logo_pjb" id="string_pjb">
+            <img src="../images/Logo_pjb.png " alt="Logo_pjb" id="img_princi">
+            <img src="../images/Gestão_PJB_Pag1.png" alt="Logo_pjb" id="string_pjb">
             <div id="buttonsAside">
-                <button class="BotPrincipal" >Cadastrar Participantes</button>
-                <button class="BotPrincipal" >Criar Atividades</button>
-                <button class="BotPrincipal" class="bottomSide">Alterar Dados do Participante </button>
-                <button class="BotPrincipal" class="bottomSide">Presença de Participantes</button>
+                <button class="BotPrincipal" id="cadPart">Cadastrar Participantes</button>
+                <button class="BotPrincipal" id="createAtiv">Criar Atividades</button>
+                <button class="BotPrincipal" id="alterData">Alterar Dados do Participante </button>
+                <button class="BotPrincipal" id="frequencia">Presença de Participantes</button>
             </div>
     </aside>
-    <script src="./scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
